deployment/daprhospital.patient.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patient
  namespace: default
  labels:
    app: patient
spec:
  replicas: 1
  selector:
    matchLabels:
      app: patient
  template:
    metadata:
      labels:
        app: patient
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "patient"
        dapr.io/app-port: "80"
        dapr.io/log-level: "info"
        dapr.io/sidecar-liveness-probe-period-seconds: "10"
        dapr.io/sidecar-readiness-probe-period-seconds: "10"
    spec:
      containers:
      - name: patient
        image: <YOUR IMAGE>
        ports:
        - containerPort: 80
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: patient
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: patient
