deployment/daprhospital.patient.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: daprhospital-patient-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - path: /patient
        pathType: Prefix
        backend:
          service:
            name: patient
            port:
              number: 80
