deployment/daprhospital.patientquery.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: daprhospital-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    
spec:
  rules:
  - http:
      paths:
      - path: /patientquery
        pathType: Prefix
        backend:
          service:
            name: patientquery
            port:
              number: 80
